# nameshot

./: .ruff.toml  README.md  main.py  pyproject.toml
nameshot/: client.py  http.py  sources.py  wmn.py
