[project]
name = "aionameshot"
version = "0.1.0"
description = "A highly performant opensource intelligence CLI tool for finding usernames."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.15.11"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["nameshot*"]
